Added ruby debug.

--- a/rws1/Gemfile
+++ b/rws1/Gemfile
@@ -2,3 +2,4 @@ source "http://rubygems.org"
 
 gem "em-websocket", :git=>"git://github.com/DavidEGrayson/em-websocket.git"
 gem "eventmachine"
+gem "ruby-debug19"
