Updated the ruby code to work with the latest versions of all the gems.

--- a/rws1/Gemfile
+++ b/rws1/Gemfile
@@ -1,5 +1,5 @@
 source "http://rubygems.org"
 
-gem "em-websocket", :git=>"git://github.com/DavidEGrayson/em-websocket.git"
+gem "em-websocket"
 gem "eventmachine"
 gem "ruby-debug19"
